--- a/OtelMvcProject/Views/Shared/_MisafirLayout.cshtml
+++ b/OtelMvcProject/Views/Shared/_MisafirLayout.cshtml
@@ -46,11 +46,11 @@
                 <div class="sb-sidenav-menu">
                     <div class="nav">
                         <div class="sb-sidenav-menu-heading">Menü</div>
-                        <a class="nav-link" href="index.html">
+                        <a class="nav-link" href="/Misafir/Index/">
                             <div class="sb-nav-link-icon"><i class="fas fa-puzzle-piece"></i></div>
                             Profilim
                         </a>
-                        <a class="nav-link collapsed" href="/Misafir/Rezervasyonlarim/" data-toggle="collapse" data-target="#collapseLayouts" aria-expanded="false" aria-controls="collapseLayouts">
+                        <a class="nav-link" href="/Misafir/Rezervasyonlarim/">
                             <div class="sb-nav-link-icon"><i class="fas fa-book"></i></div>
                             Rezervasyonlarım
                         </a>
