--- a/OtelMvcProject/Views/Shared/_MisafirLayout.cshtml
+++ b/OtelMvcProject/Views/Shared/_MisafirLayout.cshtml
@@ -54,7 +54,7 @@
                             <div class="sb-nav-link-icon"><i class="fas fa-book"></i></div>
                             Rezervasyonlarım
                         </a>
-                        <a class="nav-link collapsed" href="/Misadi" data-toggle="collapse" data-target="#collapsePages" aria-expanded="false" aria-controls="collapsePages">
+                        <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapsePages" aria-expanded="false" aria-controls="collapsePages">
                             <div class="sb-nav-link-icon"><i class="fas fa-bookmark"></i></div>
                             Mesajlarım
                         </a>
