--- a/OtelMvcProject/Views/Misafir/Index.cshtml
+++ b/OtelMvcProject/Views/Misafir/Index.cshtml
@@ -1,7 +1,41 @@
-﻿
+﻿@using OtelMvcProject.Models.Entity
+@model List<TblYeniKayit>
+
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_MisafirLayout.cshtml";
 }
 
-<h2>Index</h2>
+<h2>Profil Sayfası</h2>
+
+<div class="form-group">
+    @Html.Label("Ad Soyad")
+    <input type="text" name="Ad Soyad" class="form-control" />
+    <br />
+
+    @Html.Label("Telefon")
+    <input type="text" name="Telefon" class="form-control" />
+    <br />
+
+    @Html.Label("Şifre")
+    <input type="text" name="Sifre" class="form-control" />
+    <br />
+    
+    <button class="btn btn-warning">Bilgileri Güncelle</button>
+
+</div>
+
+@*<table>
+    <tr>
+        <th>ID</th>
+        <th>Ad</th>
+    </tr>
+    @foreach (var x in Model)
+    {
+        <tr>
+            <td>@x.ID</td>
+            <td>@x.AdSoyad</td>
+        </tr>
+    }
+
+</table>*@
