--- a/OtelMvcProject/Views/Shared/_MisafirLayout.cshtml
+++ b/OtelMvcProject/Views/Shared/_MisafirLayout.cshtml
@@ -33,9 +33,9 @@
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" id="userDropdown" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fas fa-user fa-fw"></i></a>
                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userDropdown">
-                    <a class="dropdown-item" href="#">Ayarlar</a><a class="dropdown-item" href="#">Ana Sayfa</a>
+                    <a class="dropdown-item" href="/Misafir/Index/">Ayarlar</a><a class="dropdown-item" href="/AnaSayfa/Index/">Ana Sayfa</a>
                     <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="login.html">Çıkış Yap</a>
+                    <a class="dropdown-item" href="/Misafir/LogOut/">Çıkış Yap</a>
                 </div>
             </li>
         </ul>
@@ -58,19 +58,19 @@
                             <div class="sb-nav-link-icon"><i class="fas fa-bookmark"></i></div>
                             Mesajlarım
                         </a>
-                        <a class="nav-link" href="charts.html">
+                        <a class="nav-link" href="/Rezervasyon/Index/">
                             <div class="sb-nav-link-icon"><i class="fas fa-suitcase"></i></div>
                             Yeni Rezervasyon
                         </a>
-                        <a class="nav-link" href="tables.html">
+                        <a class="nav-link" href="/AnaSayfa/Index/">
                             <div class="sb-nav-link-icon"><i class="fas fa-home"></i></div>
                             Ana Sayfa
                         </a>
-                        <a class="nav-link" href="tables.html">
+                        <a class="nav-link" href="/iletisim/Index/">
                             <div class="sb-nav-link-icon"><i class="fas fa-phone"></i></div>
                             İletişim
                         </a>
-                        <a class="nav-link" href="tables.html">
+                        <a class="nav-link" href="/Misafir/LogOut/">
                             <div class="sb-nav-link-icon"><i class="fas fa-car"></i></div>
                             Çıkış Yap
                         </a>
